--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/message_board
+spring.datasource.url=jdbc:mysql://localhost:3306/PROD_CATALOG
 spring.datasource.username=spring
 spring.datasource.password=sping123
 spring.jpa.hibernate.ddl-auto=update
