Audit data on categories entitie

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.jpa.hibernate.ddl-auto=update
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
 #spring
 spring.devtools.restart.quiet-period=810
 
