--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/PROD_CATALOG
 spring.datasource.username=spring
 spring.datasource.password=sping123
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -10,3 +10,4 @@ spring.jpa.open-in-view=false
 #spring.sql.init.mode=always
 #spring
 spring.devtools.restart.quiet-period=850
+#spring.data.jdbc.repositories.enabled=false
