--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
+# Spring
+spring.profiles.active = test
+spring.devtools.restart.quiet-period=900
+
+# DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/PROD_CATALOG
 spring.datasource.username=spring
 spring.datasource.password=sping123
-spring.jpa.hibernate.ddl-auto=create
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+
+# Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
-#spring
-spring.devtools.restart.quiet-period=850
-#spring.data.jdbc.repositories.enabled=false
+spring.jpa.hibernate.ddl-auto=create
+
+
