--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,6 @@
 # DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/prod_catalog_test
-
+# Hibernate
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
