--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 # Spring
 spring.profiles.active = test
 spring.devtools.restart.quiet-period=900
-
 # DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/PROD_CATALOG
 spring.datasource.username=spring
 spring.datasource.password=sping123
-
 # Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=create
+# Jwt
+application.jwt.secretKey=ddb174a0-e551-40a1-89fa-95930f866242
+application.jwt.tokenPrefix=Bearer
+application.jwt.tokenExpirationWeeks=2
 
 
