--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,32 @@
 # Spring
 spring.profiles.active = test
 spring.devtools.restart.quiet-period=900
+
 # DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/PROD_CATALOG
 spring.datasource.username=spring
 spring.datasource.password=sping123
+
 # Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=create
+
 # Jwt
 application.jwt.secretKey=ddb174a0-e551-40a1-89fa-95930f866242
 application.jwt.tokenPrefix=Bearer
 application.jwt.tokenExpirationWeeks=2
 
+# actuator
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
+
+#springboot admin
+spring.boot.admin.client.url=http://localhost:8081
 
