OpenApiConfig - /swagger-ui/index.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,8 @@ info.app.java.version=@java.version@
 #springboot admin
 spring.boot.admin.client.url=http://localhost:8081
 
+api.version = v1
+api.description = Product Catalog RestAPI
+api.server.url = http://localhost:8080
+
+
